Fixed Add Item Overlap

--- a/css/metabox.css
+++ b/css/metabox.css
@@ -315,11 +315,12 @@ border-top: 1px solid #ccc;
 
 #pagebuilder-add-item {
 	position: fixed;
-	width: 90%;
+	/*width: 90%;*/
 	height: 90%;
 	background: #fff;
 	top: 5%;
-	left: 5%;
+	left: 170px;
+	right: 40px;
 	z-index: 800;
 	background-color: #fff;
 	background-position: top right;
